<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".informationMovie"
    android:background="#3C3333"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pocketMovie"
        android:textColor="@android:color/white"
        android:textSize="40dp"
        android:layout_marginTop="220dp"
        android:layout_gravity="center"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="90dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nameDevelopper"
            android:textColor="@android:color/white"
            android:textSize="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jeanFrancois"
            android:textColor="@android:color/white"
            android:textSize="20dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sebastien"
            android:textColor="@android:color/white"
            android:textSize="20dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sendMessage"
            android:layout_gravity="center"
            android:textSize="15dp"
            android:background="#00ff40"
            android:textColor="#ffffff"
            android:layout_marginTop="40dp"
            android:onClick="buttonSendMessage"
            android:id="@+id/sendMessage"/>
    </LinearLayout>




</LinearLayout>